# stm32-spi-dma-sdcard

./: CMakeLists.txt  README.org
src/: sd_functions.c  sd_functions.h
